NULL =
CLEANFILES =
EXTRA_DIST =

componentsdir = $(pkgdatadir)/components/noflo-clutter
components_DATA = \
	component.json \
	Actor.coffee \
	ActorHide.coffee \
	ActorMove.coffee \
	ActorRaise.coffee \
	ActorResize.coffee \
	ActorShow.coffee \
	AddChild.coffee \
	ClutterActor.coffee \
	ClutterAnimation.coffee \
	ClutterClick.coffee \
	ClutterCoglContext.coffee \
	ClutterDefaultStage.coffee \
	ClutterDrag.coffee \
	ClutterEventConsume.coffee \
	ClutterGstCamera.coffee \
	ClutterGstPlayback.coffee \
	ClutterPipelineContent.coffee \
	CoglPipelineAddSnippet.coffee \
	CoglPipeline.coffee \
	CoglPipelineCopy.coffee \
	CoglPipelineSetTexture.coffee \
	CoglSnippet.coffee \
	CoglSnippetInvert.coffee \
	CoglSnippetSampleTexture.coffee \
	CoglSnippetTemplateCompile.coffee \
	CoglTexture.coffee \
	Init.coffee \
	Main.coffee \
	$(NULL)
