NULL =
CLEANFILES =
EXTRA_DIST =

componentsdir = $(pkgdatadir)/components/noflo-gtk
components_DATA = \
	component.json \
	Add.coffee \
	BuilderAddFile.coffee \
	ClutterInit.coffee \
	GetObject.coffee \
	GetStage.coffee \
	GetWidget.coffee \
	Hide.coffee \
	Init.coffee \
	Main.coffee \
	Pack.coffee \
	Resize.coffee \
	Show.coffee \
	$(NULL)
