NULL =
CLEANFILES =
EXTRA_DIST =

componentsdir = $(pkgdatadir)/components/noflo-gtk
components_DATA = \
	component.json \
	Add.coffee \
	BuilderAddFile.coffee \
	ClutterInit.coffee \
	ComponentLoader.coffee \
	GetObject.coffee \
	GetStage.coffee \
	GetWidget.coffee \
	GladeConstructorComponent.coffee \
	Hide.coffee \
	Init.coffee \
	LoadPixbuf.coffee \
	Main.coffee \
	Pack.coffee \
	Quit.coffee \
	Resize.coffee \
	Show.coffee \
	$(NULL)
