NULL =
CLEANFILES =
EXTRA_DIST =

componentsdir = $(pkgdatadir)/components/noflo-gnome
components_DATA = \
	component.json \
	GioFileLoadContent.coffee \
	GioFileMonitor.coffee \
	GioFileWrite.coffee \
	GioInputStreamFromFd.coffee \
	GioOutputStreamFromFd.coffee \
	GioStreamClose.coffee \
	GioStreamReadAll.coffee \
	GLibSpawn.coffee \
	ListenSignal.coffee \
	Log.coffee \
	MonitorProperty.coffee \
	RunGC.coffee \
	$(NULL)
