NULL =
CLEANFILES =
EXTRA_DIST =

componentsdir = $(pkgdatadir)/components/noflo-gnome
components_DATA = \
	component.json \
	\
	ComponentLoader.coffee \
	DbusComponentLoader.coffee \
	DbusComponentFactory.coffee \
	\
	Arguments.coffee \
	ContentToString.coffee \
	GioFileLoadContent.coffee \
	GioFileMonitor.coffee \
	GioFileWrite.coffee \
	GioInputStreamFromFd.coffee \
	GioOutputStreamFromFd.coffee \
	GioStreamClose.coffee \
	GioStreamReadAll.coffee \
	GLibSpawn.coffee \
	ListenProperty.coffee \
	ListenSignal.coffee \
	Log.coffee \
	Print.coffee \
	RunGC.coffee \
	$(NULL)
