NULL =
CLEANFILES =
EXTRA_DIST =

componentsdir = $(pkgdatadir)/components/noflo-gtk
dist_components_DATA = \
	component.json \
	Add.coffee \
	BuilderAddFile.coffee \
	ClutterInit.coffee \
	ComponentLoader.coffee \
	ConsumeEvent.coffee \
	GetObject.coffee \
	GetStage.coffee \
	GetWidget.coffee \
	GladeConstructorComponent.coffee \
	GrabFocus.coffee \
	Hide.coffee \
	Init.coffee \
	KeyPressDetect.coffee \
	ListenEvent.coffee \
	LoadPixbuf.coffee \
	Main.coffee \
	Pack.coffee \
	Quit.coffee \
	Resize.coffee \
	ScalePixbuf.coffee \
	Show.coffee \
	$(NULL)
