NULL =
CLEANFILES =

noinst_DATA = \
	components/AddTile.coffee \
	components/ApplyAnimations.coffee \
	components/DisplayMap.coffee \
	components/EmptyMap.coffee \
	components/PrintMap.coffee \
	components/SquashTiles.coffee \
	manifest.json \
	graphs/Main.json \
	ui/2048.ui \
	$(NULL)

EXTRA_DIST = $(noinst_DATA)
